--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Archivo+Narrow&display=swap');
 
 *{
     box-sizing: border-box;
@@ -8,13 +8,9 @@ html, body {
 	height: 100vh;
 	margin: 0;
 	padding: 0;
-	font-family: "Josefin Sans", sans-serif;
+	font-family: "Archivo Narrow", sans-serif;
 
 	scroll-behavior: smooth;
-}
-
-body, input, button {
-	font-family: "Josefin Sans", sans-serif;
 }
 
 header {
@@ -104,6 +100,7 @@ main img {
 }
 
 #cta {
+    font-family: "Archivo Black";
 	background: none;
 	border: none;
 	outline: none;
